modified:   src/main/resources/static/details2.html 	new file:   src/main/resources/static/newjob.html 	modified:   src/main/resources/static/tables.html 	modified:   src/main/resources/templates/tables.html

--- a/src/main/resources/templates/tables.html
+++ b/src/main/resources/templates/tables.html
@@ -89,7 +89,6 @@
     </nav>
 
     <div id="wrapper">
-
       <!-- Sidebar -->
       <ul class="sidebar navbar-nav">
         <li class="nav-item">
@@ -133,7 +132,7 @@
           <!-- Breadcrumbs-->
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="#">控制台</a>
+              <a href="index.html">控制台</a>
             </li>
             <li class="breadcrumb-item active">表单</li>
           </ol>
